2008-06-19  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	* applets/showdesktop/showdesktop.c:
	Use panel- prefixed icon names.

2008-03-04  Marcin Juszkiewicz  <hrw@openedhand.com>

	* applets/battery/battery.c:
	Re-order includes to get it built with 2.6.24 linux-libc-headers.

2008-02-21  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	Attempt to lookup an icon called panel-[name] before [name], so it
	can be themed.

2008-02-20  Ross Burton  <ross@openedhand.com>

	* applets/notify/mb-notification.c:
	Draw a shadow around the notification.

2008-02-19  Ross Burton  <ross@openedhand.com>

	* applets/startup-notify/startup.c:
	Use an icon name which actually exists, and extend the default
	timeout.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* applets/startup-notify/startup.c:
	Set the notification icon to the generic application icon for now.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Don't check for libnotify.

	* applets/Makefile.am:
	Build startup-notify if we have DBus.

	* applets/startup-notify:
	Don't use libnotify as it doesn't conform to the specification and
	makes blocking DBus calls.  Instead, call it directly.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* applets/clock/clock.c:
	Don't set a colour in the code, let the theme style it.

2008-02-14  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Remove applets/battery/data/, argh.

2008-02-14  Ross Burton  <ross@openedhand.com>

	* applets/battery/data/:
	* applets/battery/battery.c:
	Don't use private icons, use the icon theme.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/Makefile.am:
	* applets/windowselector/Makefile.am:
	Don't try and install files I just deleted.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	Use "user-desktop" stock icon instead of custom icons.
	
	* applets/showdesktop/mb-applet-showdesktop-active.png: